--- a/moneyclub/templates/moneyclub/article.html
+++ b/moneyclub/templates/moneyclub/article.html
@@ -1,7 +1,7 @@
 {% extends "moneyclub/login_template.html" %}
 
     {% block title %}
-    <title>Article: Decision on splitting RBS overshadows trading update</title>
+    <title>Article: {{article.title.value}}</title>
     {% endblock title %}
   
 
@@ -11,14 +11,20 @@
       <div class="row row-offcanvas">
         <div class="col-lg-8">
           <div class="article">
-         <h1>Decision on splitting RBS overshadows trading update</h1>
-          <p class="lead">by <a href="grouppage.html">Scotland-America Trading</a></p>
+         <h1>{{article.title.value}}</h1>
+          <p class="lead">by <a href="grouppage.html">{{user}}</a></p>
           <hr>
-          <p><span class="glyphicon glyphicon-time"></span> Posted on August 29, 2013 at 8:00 PM</p>
+          <p><span class="glyphicon glyphicon-time"></span> Post at {{article.datetime}}</p>
           <hr>
-          <img src="http://www.scotsman.com/webimage/1.3159719.1382808600!/image/1138188830.jpg_gen/derivatives/articleImgDeriv_628px/1138188830.jpg" class="img-responsive">
+          <!--
+          {% for field in article.visible_fields %}
+          {{field.label_tag}}: 
+          {{field}}
+          <p style="color:red;"> {{field.errors}} </p>
+          {% endfor %}
+        -->
           
-          <p class="lead">Investment bank Rothschild is to advise Chancellor George Osborne on whether to split off operations such as Ulster Bank and £40 billion of non-core loans to accelerate the privatisation of the remaining good parts of RBS.</p><p>The City anticipates the under­lying performance of majority taxpayer-owned RBS to have been “steady”, but expects no news on chief executive Ross McEwan’s strategic review until full-year results are unveiled in February.</p><p>McEwan took over from Stephen Hester on 1 October. A note from UBS said: “We don’t expect any significant strategic announcements, but instead expect an initial view [from the new boss] of the business/political/regulatory landscape.</p><p>“We expect the UK government announcement on the ‘good/bad’ bank review of RBS to coincide with the third-quarter results.”</p><p>UBS expects an operating profit of £483 million, with a continuing fall in bad debts helping an underlying operating profit of £1.14bn from continuing core activities.</p><p>RBS’s much-reduced investment bank is expected to have had a slightly better third quarter after a disappointing first two quarters of 2013.</p><p>McEwan is thought likely to play down speculation that RBS may bring forward the partial flotation of its Citizens unit in America from the 2014 target set under Hester’s restructuring of the group.</p><p>Meanwhile, Lloyds Banking Group boss Antonio Horta-­Osorio is expected to say the third quarter has been one of “significant milestones” for the also partly owned taxpayer bank, which runs Bank of Scotland and Scottish Widows.</p><p>Horta-Osorio will cite the sell-down of the UK government’s stake from 39 to 33 per cent, and the operational spin-off of TSB bank onto the high street ahead of its planned flotation next summer.</p><p>Broker Credit Suisse expects an underlying pre-tax profit of £1.53bn as Lloyds continues its trading recovery alongside several asset disposals in the quarter, including its German life insurance business for about £250m. </p><p>n Virgin Money chief executive Jayne-Anne Gadhia will use a speech at Friday’s Institute of Directors Scotland conference to renew pressure for the introduction of portable current account numbers, a move she believes would help break up the “oligarchy” of the UK’s four dominant banks. </p><p>Much like a “MAC address” for a mobile phone – which ­allows users to seamlessly switch networks – portable account numbers would let customers move banks without having to transfer direct debits and standing orders.</p><p>Consumer group Which? has backed the idea, but ­Gadhia is among the minority of bankers who favour setting up such a system. Most in the industry have rejected it as complicated and expensive, with an ­estimated cost of £5bn.</p>
+          <p class="lead">{{article.content.value}}</p>
 
        
           <hr>
@@ -53,7 +59,7 @@
               <div class="col-lg-8">
                 <div class="media">
                     <a class="pull-left" href="#">
-                      <img class="media-object" src="../../static/image/289919_1252843359020_250_330.jpg" alt="..."width="100px">
+                      <img class="media-object" src="/static/image/289919_1252843359020_250_330.jpg" alt="..."width="100px">
                     </a>
                   <div class="media-body">
                     <h4 class="media-heading"><a href="index.html">Scrooge Mcduck</a></h4>
