--- a/moneyclub/templates/moneyclub/profile.html
+++ b/moneyclub/templates/moneyclub/profile.html
@@ -54,7 +54,7 @@
       <div class="row marketing ">
         <div class="col-lg-12">
         	<form enctype="multipart/form-data"
-	 		method="post" action="/member/save-profile" id="save_profile">
+	 		method="post" action="/moneyclub/member/save-profile" id="save_profile">
 	        	{% for field in profile.visible_fields %}
 				<div class="block">
 					{% if field.name != "profilepicture" %}
