--- a/moneyclub/templates/moneyclub/create_moneyclub.html
+++ b/moneyclub/templates/moneyclub/create_moneyclub.html
@@ -42,7 +42,7 @@
 </tr><br/>
 
 <tr>
-	<td><input type="submit" value="Submit Changes"  method="post" action="grumblr/editprofilesubmit"></td>
+	<td><input type="submit" value="Submit Changes"  method="post" ></td>
 	<td>{%csrf_token%}</td>
 </tr>
 {%for error in errors%}
@@ -50,6 +50,11 @@
 {%endfor%}
 </table>
 </form>
+    {% for field in form.visible_fields %}
+          {{field.label_tag}}: 
+          {{field}}
+          <p style="color:red;"> {{field.errors}} </p>
+          {% endfor %}
     </div> <!-- /container -->
     {% endblock contentsblock %}
 
