--- a/moneyclub/templates/moneyclub/group_home_page.html
+++ b/moneyclub/templates/moneyclub/group_home_page.html
@@ -95,8 +95,11 @@
                               <div id="pane2" class="tab-pane">
                                 
                                   <form action="#" method="POST">
-                                    <div class="input-group ">
+                                    <div class="form-group ">
                                       <input type="text" class="form-control" placeholder="Title" name="title">
+                                    </div>
+                                    <div class="input-group ">
+                                      
                                     <span class="input-group-addon "><span class="glyphicon glyphicon-link"></span></span>
                                     <input type="text" class="form-control" placeholder="URL">
                                      </div>
@@ -109,8 +112,11 @@
                               </div>
                               <div id="pane3" class="tab-pane">
                                 <form action="#" method="POST">
-                                    <div class="input-group ">
+                                  <div class="form-group ">
                                       <input type="text" class="form-control" placeholder="Title" name="title">
+                                    </div>
+                                    <div class="input-group ">
+                                      
                                     <span class="input-group-addon "><span class="glyphicon glyphicon-link"></span></span>
                                     <input type="text" class="form-control" placeholder="URL of the image">
                                      </div>
@@ -131,7 +137,14 @@
                                         <div class="col-xs-12 col-sm-12 col-md-12 well well-sm">
                                             
                                             <form action="#" method="post" class="form" role="form">
-                                              <input type="text" class="form-control" placeholder="Title" name="title">
+                                              <div class="form-group">
+                                                <label for="loc_input" class="col-md-3 control-label">Event </label>
+                                                <div class="input-group  col-md-7" >
+                                                    <input class="form-control" size="16" type="text" value="" name="title" >
+                                                    
+                                                    
+                                                </div>
+                                            </div> <!--/.form-group -->
                                               <div class="form-group">
                                               <label for="dtp_input2" class="col-md-3 control-label">Date </label>
                                                 <div class="input-group date form_date col-md-7" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
@@ -162,10 +175,9 @@
                                                 </div>
                                             </div> <!--/.form-group -->
                                             <div class="form-group">
-                                                <label for="evt_input" class="col-md-3 control-label">Event </label>
+                                                <label for="evt_input" class="col-md-3 control-label">Description </label>
                                                 <div class="input-group  col-md-7" >
-                                                    <input class="form-control" size="16" type="text" value="" >
-                                                    
+                                                     <textarea class="form-control counted" name="description" rows="2" ></textarea>
                                                     
                                                 </div>
                                             </div> <!--/.form-group -->
@@ -214,28 +226,29 @@
                 <div class="media-body">
                   
                   <h4 class="media-heading"><a href="#">{{post.title}}</a></h4>
-                  {% if post.type == 0 %}
+                  {% if post.articleType == 0 %}
                   <!-- text post -->
                   <span class="label label-info">Article</span>
                   {{post.content|truncatechars:100}}...
                   {% endif%}
-                   {% if post.type == 1 %}
+                   {% if post.articleType == 1 %}
                   <!-- link post -->
                   <span class="label label-info">Link</span>
-                  <a href="{{post.link}}">
-                    {{post.link}}
+                  <a href="{{post.content}}">
+                    {{post.content}}
                   </a>
                   {% endif%}
-                   {% if post.type==2 %}
+                   {% if post.articleType == 2 %}
                   <!-- image post -->
                   <span class="label label-info">Image</span>
-                  <img class="media-object" src="{% url 'post-photo' post..id %}" alt="..."width="400px">
+                  <img class="media-object" src="{% url 'post-photo' post.id %}" alt="..."width="400px">
+                  <p> {{post.description}} </p>
                   {% endif%}
-                   {% if post.type==3 %}
+                   {% if post.articleType == 3 %}
                   <!-- event post to do-->
                   <span class="label label-info">Event</span>
                   {% for field in post.eventform.visible_fields %}
-                  {% field %}
+                    {{ field }}
                   {%endfor%}
                   {% endif%}
                 </div>
@@ -244,7 +257,7 @@
               </div><!--/media-->
               </div> <!--./row-->
             {% endfor %}
-          
+          </div>
           {% endblock articles %}
 
           {% block sidebars %}
