--- a/moneyclub/templates/moneyclub/index.html
+++ b/moneyclub/templates/moneyclub/index.html
@@ -10,6 +10,8 @@
     <link href="/static/css/offcanvas.css" rel="stylesheet">
     <link href="/static/css/bootstrap-datetimepicker.css" rel="stylesheet">
     <script src="/static/js/jquery-1.10.2.min.js"></script>
+    <script src="/static/js/stock.js"></script>
+    <script src="/static/js/edit_stock.js"></script>
   {% endblock headblock %}
 
   
@@ -105,52 +107,58 @@
         
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="siderbars" role="navigation">
           {% block sidebars %}
-          <div class="well sidebar-nav">
+          <div class="well sidebar-nav" id="stock">
             <ul class="nav">
              
               <table class="table table-striped table-condensed">
                   <thead>
                           <tr>
-                            <th></th>
-                            <th>PRICE</th>
-                            <th>CHG</th>
-                            <th>%CHG</th>
+                            <td></td>
+                            <td>PRICE</td>
+                            <td>CHG</td>
+                            <td>%CHG</td>
                           </tr>
                   </thead>   
                   <tbody>
-                          <tr>
-                            <td><a href="#">Dow</a></td>
-                            <td>15,580</td>
-                            <td style="color:red">-40</td>
-                            <th style="color:red">0.27%</th>
-                          </tr>
-                  </tbody>
-                  <tbody>
-                          <tr>
-                            <td><a href="#">S&P</a></td>
-                            <td>1,760</td>
-                            <td style="color:red">-3</td>
-                            <th style="color:red">0.19%</th>
-                          </tr>
-                  </tbody>
-                  <tbody>
-                          <tr>
-                            <td><a href="#">Gold</a></td>
-                            <td>1,325</td>
-                            <td style="color:red">-24</td>
-                            <th style="color:red">1.80%</th>
-                          </tr>
-                  </tbody>
-                   <tbody>
-                          <tr>
-                            <td><a href="#">MCD</a></td>
-                            <td>525</td>
-                            <td style="color:green">17</td>
-                            <th style="color:green">0.31%</th>
-                          </tr>
+                    {% for stock in stocks %}
+                      <tr id="{{stock.id}}">
+                            <td>{{stock.stock_name}}</td>
+                            <td>{{stock.price}}</td>
+                            <td>{{stock.change}}</td>
+                            <td >{{stock.percent_change}}</td>
+                            <th> <span class="glyphicon glyphicon-minus delete-stock" id="{{stock.id}}" style="color:red;font-size:75%"></span></th>
+                      </tr>
+                    {% endfor %}
+                         
                   </tbody>
               </table>
+              <div class="input-group add-stock">
+                <input type="text" class="form-control add-stock" placeholder="add stock">
+                <span class="input-group-btn">
+                  <button class="btn btn-success" type="button">
+                    <span class="glyphicon glyphicon-plus">
+                </span>
+                
+              </div><!-- /input-group -->
               
+
+              <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
             </ul>
           </div><!--/.well -->
           <div class="well sidebar-nav">
